--- a/terraform/modules/concourse_web/templates/cloudwatch_agent_config.json
+++ b/terraform/modules/concourse_web/templates/cloudwatch_agent_config.json
@@ -23,27 +23,9 @@
     },
     "metrics": {
         "append_dimensions": {
-            "AutoScalingGroupName": "$${aws:AutoScalingGroupName}",
-            "ImageId": "$${aws:ImageId}",
-            "InstanceId": "$${aws:InstanceId}",
-            "InstanceType": "$${aws:InstanceType}"
+            "InstanceId": "$${aws:InstanceId}"
         },
         "metrics_collected": {
-            "disk": {
-                "measurement": [
-                    "used_percent"
-                ],
-                "metrics_collection_interval": 60,
-                "resources": [
-                    "*"
-                ]
-            },
-            "mem": {
-                "measurement": [
-                    "mem_used_percent"
-                ],
-                "metrics_collection_interval": 60
-            },
             "statsd": {
                 "metrics_aggregation_interval": 60,
                 "metrics_collection_interval": 10,
