Change cloudwatch metrics namespace

--- a/terraform/modules/concourse_web/templates/cloudwatch_agent_config.json
+++ b/terraform/modules/concourse_web/templates/cloudwatch_agent_config.json
@@ -22,6 +22,7 @@
         }
     },
     "metrics": {
+        "namespace": "CWAgent/${cloudwatch_namespace}",
         "append_dimensions": {
             "InstanceId": "$${aws:InstanceId}"
         },
