Unify web logs under ASG name instead of using instanceid

--- a/terraform/modules/concourse_web/templates/cloudwatch_agent_config.json
+++ b/terraform/modules/concourse_web/templates/cloudwatch_agent_config.json
@@ -24,7 +24,7 @@
     "metrics": {
         "namespace": "CWAgent/${cloudwatch_namespace}",
         "append_dimensions": {
-            "InstanceId": "$${aws:InstanceId}"
+            "AutoScalingGroupName": "$${aws:AutoScalingGroupName}"
         },
         "metrics_collected": {
             "statsd": {
