correct the mis-configured GitHub auth in the pipeline repo resource
Signed-off-by: Daniel Hill <danhill@digital.uc.dwp.gov.uk>

--- a/ci/resources.yml
+++ b/ci/resources.yml
@@ -10,6 +10,7 @@ resources:
   type: git
   source:
     branch: master
-    private_key: ((github_com.token))
+    username: ((github_com.username))
+    password: ((github_com.token))
     uri: https://github.com/dwp/aws-concourse.git
   check_every: 15m
