--- a/ci/jobs/pull_request.yml
+++ b/ci/jobs/pull_request.yml
@@ -19,8 +19,8 @@ jobs:
         type: docker-image
         source:
           repository: ((terraform.repository))
-          version: 0.12.19
-          tag: 0.12.19
+          version: ((terraform12.version))
+          tag: ((terraform12.version))
       params:
         AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
         AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
