--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -36,8 +36,8 @@ meta:
           type: docker-image
           source:
             repository: ((terraform.repository))
-            version: 0.12.19
-            tag: 0.12.19
+            version: ((terraform12.version))
+            tag: ((terraform12.version))
         params:
           AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
           AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
@@ -67,8 +67,8 @@ meta:
           type: docker-image
           source:
             repository: ((terraform.repository))
-            version: 0.12.19
-            tag: 0.12.19
+            version: ((terraform12.version))
+            tag: ((terraform12.version))
         params:
           AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
           AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
