DW-3414: Add smoke tests for Concourse deployments

--- a/ci/jobs/management-dev.yml
+++ b/ci/jobs/management-dev.yml
@@ -6,3 +6,5 @@ jobs:
   - .: (( inject meta.plan.terraform-bootstrap ))
   - .: (( inject meta.plan.terraform-apply ))
   - .: (( inject meta.plan.terraform-plan ))
+  - .: (( inject meta.plan.terraform-output ))
+  - .: (( inject meta.plan.concourse-smoke-tests ))
