--- a/ci/jobs/management.yml
+++ b/ci/jobs/management.yml
@@ -12,3 +12,7 @@ jobs:
   - .: (( inject meta.plan.terraform-plan ))
     params:
       TF_WORKSPACE: management
+  - .: (( inject meta.plan.terraform-output ))
+    params:
+      TF_WORKSPACE: management
+  - .: (( inject meta.plan.concourse-smoke-tests ))
