--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -90,3 +90,53 @@ meta:
         inputs:
         - name: aws-concourse
         - name: terraform-config
+    terraform-output:
+      task: terraform-output
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: ((terraform.repository))
+            version: ((terraform12.version))
+            tag: ((terraform12.version))
+        params:
+          AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
+          AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
+        run:
+          path: sh
+          dir: aws-concourse/terraform/deploy
+          args:
+          - -exc
+          - |
+            cp ../../../terraform-config/terraform.tf .
+            cp ../../../terraform-config/terraform.tfvars .
+            terraform init
+            terraform workspace show
+            terraform output -json > ../../../terraform-output/outputs.json
+        inputs:
+        - name: aws-concourse
+        - name: terraform-config
+        outputs:
+        - name: terraform-output
+    concourse-smoke-tests:
+      task: concourse-smoke-tests
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: dwpdigital/alpine-jq-curl
+            version: 0.0.4
+            tag: 0.0.4
+        run:
+          path: sh
+          args:
+            - -exc
+            - |
+              CONCOURSE_URI=$(cat ../terraform-output/outputs.json | jq -r .loadbalancer.value.outputs.fqdn)
+              curl -kIs https://${CONCOURSE_URI} | grep 'HTTP/2 200'
+              curl -ks https://${CONCOURSE_URI} | grep 'Concourse'
+          dir: concourse-smoke-tests
+        inputs:
+          - name: terraform-output
