DW-3415: Deploy test lambda to confirm connectivity
The packer-test-egress Lambda, despite its name, is generic enough that we
should be able to use it to confirm that Concourse can reach all services
it needs to via the Internet Egress proxy.

Clients of the UI remain routed via the NAT Gateway -> Internet Gateway infra
Clients of the Internet Proxy get routed via the Transit Gateway
All other traffic remains within the VPC

--- a/ci/resources.yml
+++ b/ci/resources.yml
@@ -14,3 +14,11 @@ resources:
     password: ((github_com.token))
     uri: https://github.com/dwp/aws-concourse.git
   check_every: 15m
+- name: packer-egress-test-release
+  type: github-release
+  source:
+    owner: dwp
+    repository: packer-egress-test
+    access_token: ((github_com.token))
+  check_every: 720h
+
