Fix CI pipeline

--- a/ci/jobs/management-dev.yml
+++ b/ci/jobs/management-dev.yml
@@ -3,6 +3,7 @@ jobs:
   plan:
   - get: aws-concourse
     trigger: true
+  - get: packer-egress-test-release
   - .: (( inject meta.plan.terraform-bootstrap ))
   - .: (( inject meta.plan.terraform-apply ))
   - .: (( inject meta.plan.terraform-plan ))
