--- a/ci/jobs/management.yml
+++ b/ci/jobs/management.yml
@@ -6,6 +6,8 @@ jobs:
     - management-dev
     trigger: true
   - get: packer-egress-test-release
+    passed:
+    - management-dev
   - .: (( inject meta.plan.terraform-bootstrap ))
   - .: (( inject meta.plan.terraform-apply ))
     params:
