DW-3415 Connect to Internet Egress proxy (#44)
* DW-3415 Connect to Internet Egress proxy

* DW-3415: Deploy test lambda to confirm connectivity

The packer-test-egress Lambda, despite its name, is generic enough that we
should be able to use it to confirm that Concourse can reach all services
it needs to via the Internet Egress proxy.

Clients of the UI remain routed via the NAT Gateway -> Internet Gateway infra
Clients of the Internet Proxy get routed via the Transit Gateway
All other traffic remains within the VPC

* Fix CI pipeline

* Address review comments

* Use common proxy settings for Concourse & test Lambda

* Configure Concourse to use proxy settings

* fmt

* Fix tagging style

* Use existing whitelist_cidr_blocks variable for routing rules

--- a/ci/jobs/management.yml
+++ b/ci/jobs/management.yml
@@ -5,6 +5,9 @@ jobs:
     passed:
     - management-dev
     trigger: true
+  - get: packer-egress-test-release
+    passed:
+    - management-dev
   - .: (( inject meta.plan.terraform-bootstrap ))
   - .: (( inject meta.plan.terraform-apply ))
     params:
