--- a/ci/jobs/management.yml
+++ b/ci/jobs/management.yml
@@ -19,3 +19,7 @@ jobs:
     params:
       TF_WORKSPACE: management
   - .: (( inject meta.plan.concourse-smoke-tests ))
+  - .: (( inject meta.plan.generate-negative-proxy-test-manifest ))
+  - .: (( inject meta.plan.generate-positive-proxy-test-manifest ))
+  - .: (( inject meta.plan.run-positive-proxy-test ))
+  - .: (( inject meta.plan.run-negative-proxy-test ))
