Convert CI pipeline jobs to Jinja templates
Some jobs now require sensitive info, so need to be run through a similar
process to the terraform config.

--- a/aviator.yml
+++ b/aviator.yml
@@ -6,6 +6,9 @@ spruce:
   - with_in: ci/
     regexp: ".*yml"
   - with_in: ci/jobs/
+    except:
+    - management-dev.yml.j2
+    - management.yml.j2
   to: aviator_pipeline.yml
 fly:
   name: aws-concourse
