--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -144,6 +144,45 @@ meta:
           dir: concourse-smoke-tests
         inputs:
           - name: terraform-output
+    create-aws-profiles:
+      task: create-aws-profiles
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: ((docker-awscli.repository))
+            version: ((docker-awscli.version))
+            tag: ((docker-awscli.version))
+        outputs:
+          - name: .aws
+        params:
+          AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
+          AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
+          AWS_PROFILE: ci
+        run:
+          path: sh
+          args:
+          - -exc
+          - |
+            cat <<EOF> .aws/credentials
+            [default]
+            aws_access_key_id = $AWS_ACCESS_KEY_ID
+            aws_secret_access_key = $AWS_SECRET_ACCESS_KEY
+            [${AWS_PROFILE}]
+            role_arn = arn:aws:iam::${AWS_ACC}:role/${AWS_PROFILE}
+            source_profile = default
+            EOF
+            cat <<EOF> .aws/config
+            [default]
+            region = eu-west-2
+            [profile ${AWS_PROFILE}]
+            region = eu-west-2
+            s3 =
+              max_concurrent_requests = 5
+              signature_version = s3v4
+              addressing_style = virtual
+            EOF
     generate-positive-proxy-test-manifest:
       task: generate-positive-proxy-test-manifest
       config:
