--- a/aviator.yml
+++ b/aviator.yml
@@ -1,17 +1,17 @@
 spruce:
-- base: ci/meta.yml
-  prune:
-  - meta
-  merge:
-  - with_in: ci/
-    regexp: ".*yml"
-  - with_in: ci/jobs/
-    except:
-    - management-dev.yml.j2
-    - management.yml.j2
-  to: aviator_pipeline.yml
+  - base: ci/meta.yml
+    prune:
+      - meta
+    merge:
+      - with_in: ci/
+        regexp: ".*yml"
+      - with_in: ci/jobs/
+        except:
+          - management-dev.yml.j2
+          - management.yml.j2
+    to: aviator_pipeline.yml
 fly:
   name: aws-concourse
-  target: concourse
+  target: aws-concourse
   expose: false
   config: aviator_pipeline.yml
