--- a/ci/resources.yml
+++ b/ci/resources.yml
@@ -1,24 +1,23 @@
 resources:
-- name: aws-concourse-pr
-  type: pull-request
-  source:
-    access_token: ((github_com.token))
-    repo: dwp/aws-concourse
-    uri: https://github.com/dwp/aws-concourse.git
-  check_every: 15m
-- name: aws-concourse
-  type: git
-  source:
-    branch: master
-    username: ((github_com.username))
-    password: ((github_com.token))
-    uri: https://github.com/dwp/aws-concourse.git
-  check_every: 15m
-- name: packer-egress-test-release
-  type: github-release
-  source:
-    owner: dwp
-    repository: packer-egress-test
-    access_token: ((github_com.token))
-  check_every: 720h
-
+  - name: aws-concourse-pr
+    type: pull-request
+    source:
+      access_token: ((github_com.token))
+      repo: dwp/aws-concourse
+      uri: https://github.com/dwp/aws-concourse.git
+    check_every: 15m
+  # - name: aws-concourse
+  #   type: git
+  #   source:
+  #     branch: master
+  #     username: ((github_com.username))
+  #     password: ((github_com.token))
+  #     uri: https://github.com/dwp/aws-concourse.git
+  #  check_every: 15m
+  - name: packer-egress-test-release
+    type: github-release
+    source:
+      owner: dwp
+      repository: packer-egress-test
+      access_token: ((github_com.token))
+    check_every: 720h
