--- a/hello_world_pipeline.yml
+++ b/hello_world_pipeline.yml
@@ -11,4 +11,4 @@ jobs:
             source: { repository: busybox }
           run:
             path: echo
-            args: [((output))]
+            args: [((mybinary.hello))]
