--- a/ci/resources.yml
+++ b/ci/resources.yml
@@ -6,14 +6,14 @@ resources:
       repo: dwp/aws-concourse
       uri: https://github.com/dwp/aws-concourse.git
     check_every: 15m
-  # - name: aws-concourse
-  #   type: git
-  #   source:
-  #     branch: master
-  #     username: ((github_com.username))
-  #     password: ((github_com.token))
-  #     uri: https://github.com/dwp/aws-concourse.git
-  #  check_every: 15m
+  - name: aws-concourse
+    type: git
+    source:
+      branch: master
+      username: ((github_com.username))
+      password: ((github_com.token))
+      uri: https://github.com/dwp/aws-concourse.git
+   check_every: 15m
   - name: packer-egress-test-release
     type: github-release
     source:
