More pipeline regression fixes

--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -195,6 +195,10 @@ meta:
             tag: ((docker-awscli.version))
         outputs:
           - name: positive-proxy-test-manifest
+        params:
+          AWS_PROFILE: ci
+          AWS_SHARED_CREDENTIALS_FILE: .aws/credentials
+          AWS_CONFIG_FILE: .aws/config
         run:
           path: sh
           dir: positive-proxy-test-manifest
@@ -209,7 +213,6 @@ meta:
               }
               EOF
               cat positive-manifest.json
-              |
               cat << EOF > negative-manifest.json
               {
                 "required_endpoints": {
@@ -218,23 +221,19 @@ meta:
               }
               EOF
               cat negative-manifest.json
-              |
               echo "Test that whitelisted URLs are accessible through proxy"
               aws lambda invoke --function-name packer_egress_test \
                 --invocation-type RequestResponse \
-                --payload file://positive-proxy-test-manifest/positive-manifest.json \
+                --payload file://positive-manifest.json \
                 --cli-connect-timeout 600 \
                 --cli-read-timeout 600 \
               output.json
-
               cat output.json | jq -eC 'if .errorMessage? then error(.errorMessage) else true end'
-              |
               echo "Test that URLs not in the whitelist aren't accessible through proxy"
               aws lambda invoke --function-name packer_egress_test \
                 --invocation-type RequestResponse \
-                --payload file://negative-proxy-test-manifest/negative-manifest.json \
+                --payload file://negative-manifest.json \
                 --cli-connect-timeout 600 \
                 --cli-read-timeout 600 \
               output.json
-
               cat output.json | jq -eC 'if .errorMessage? then true else error("Connection to internet not blocked") end'
