Added pipeline for automating cycling of nodes
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ terraform.tf
 aviator_pipeline.yml
 ci/jobs/management-dev.yml
 ci/jobs/management.yml
+ci/jobs/reboot-web-management.yml
+ci/jobs/reboot-worker-management.yml
