--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -259,7 +259,7 @@ meta:
           args:
             - -exc
             - |
-              for INSTANCE_ID in $(aws ec2 describe-instances --filters Name=tag:Name,Values=concourse-worker --profile dataworks-management-dev | jq -r '.Reservations[].Instances[].InstanceId');
+              for INSTANCE_ID in $(aws ec2 describe-instances --filters Name=tag:Name,Values=concourse-worker | jq -r '.Reservations[].Instances[].InstanceId');
               do
                 aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy
               done
@@ -284,7 +284,7 @@ meta:
           args:
             - -exc
             - |
-              for INSTANCE_ID in $(aws ec2 describe-instances --filters Name=tag:Name,Values=concourse-web --profile dataworks-management-dev | jq -r '.Reservations[].Instances[].InstanceId');
+              for INSTANCE_ID in $(aws ec2 describe-instances --filters Name=tag:Name,Values=concourse-web | jq -r '.Reservations[].Instances[].InstanceId');
               do
                 aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy
               done
